# garmin-analysis

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  test_bivariate_fit.py  test_bivariate_mismatched.py  test_cyclic_optimized.py  test_cyclic_prediction.py  test_flexible_optimized.py  test_flexible_prediction.py  test_hourly_prediction_grid.py  test_jitter.py  test_lower_bounds.py  test_original_optimized.py  test_prediction.py  test_priors.py  test_spline_compile.py  test_spline_fit.py  test_spline_optimized.py  test_spline_prediction_plot.py  test_stability.py  test_waic.py
.claude/: settings.json
.claude-archive/: status-archive-2026-01-31_22-28-02.txt  status-archive-2026-01-31_23-17-24.txt
docs/: __init__.py  convert_to_html.py  generate_docs.py  index.html  test.md  weight_gp_model_explanation.md  workout_data_report.md
scripts/: generate-docs.sh  status-helper.sh  update-status-example.sh
src/: __init__.py  _generate_docs.py
stan/: gp_simple.stan  test_cov_exp_quad.stan  test_cov_periodic.stan  test_gp_exp_quad_cov.stan  weight_gp.stan  weight_gp_bivariate.stan  weight_gp_bivariate_mismatched.stan  weight_gp_crosslagged.stan  weight_gp_crosslagged_cumulative.stan  weight_gp_crosslagged_cumulative_improved.stan  weight_gp_crosslagged_estimated.stan  weight_gp_crosslagged_estimated_improved.stan  weight_gp_crosslagged_improved.stan  weight_gp_cyclic.stan  weight_gp_cyclic_optimized.stan  weight_gp_flexible.stan  weight_gp_flexible_optimized.stan  weight_gp_optimized.stan  weight_gp_spline.stan  weight_gp_spline_optimized.stan  (+3 more)
(+54 files in other folders)
