[project]
name = "garmin-analysis-v2"
version = "0.1.0"
description = "Bayesian analysis of Garmin health data using Stan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmdstanpy>=1.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "arviz>=0.17.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
